Normalization Process Change

--- a/learning.ipynb
+++ b/learning.ipynb
@@ -18,8 +18,8 @@
     "batch_size = 50   # one sentence\n",
     "sequence_length = 5  # |ihello| == 6\n",
     "learning_rate = 0.0001\n",
-    "data_mean = 18.259262916894478\n",
-    "data_std = 65.31321040452339\n",
+    "data_mean = 0\n",
+    "data_std = 0\n",
     "epoch_num = 5"
    ]
   },
@@ -47,7 +47,7 @@
     "    # pool3 \n",
     "    pool3 = tf.layers.max_pooling2d(inputs=conv3, pool_size=[4, 8], padding='SAME', strides=2)\n",
     "    \n",
-    "    flat = tf.reshape(pool3, [-1, 50*100*64])\n",
+    "    flat = tf.reshape(pool3, [-1, 100*200*16])\n",
     "    w = tf.get_variable(\"w\", [hidden_size, hidden_size])\n",
     "    b = tf.get_variable(\"b\", [hidden_size])\n",
     "    \n",
@@ -209,7 +209,12 @@
     "        sess.run(tf.global_variables_initializer())\n",
     "    model_name = raw_input(\"Model_Name: \")\n",
     "    \n",
-    "    data_names = [x[:-4] for x in listdir('./logs')]\n",
+    "    data_names = [x[:-4] for x in listdir('./logs') if x[-4:]=='.csv']\n",
+    "    \n",
+    "    with open('./logs/norm.txt', 'r') as f:\n",
+    "        data_mean = float(f.readline())\n",
+    "        data_std = float(f.readline())\n",
+    "    \n",
     "    try:\n",
     "        for epoch in range(epoch_num):\n",
     "            \n",
